[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Asteroid.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 8, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 0, 592, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
Asteroid = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AsteroidPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="AsteroidSpawnLocation" type="PathFollow2D" parent="AsteroidPath"]
rotation = 0.00781234
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
